<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.jetlinks.pro</groupId>
    <artifactId>jetlinks-project-template</artifactId>
    <version>2.11.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>JetLinks 项目模版</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.locales>zh_CN</project.build.locales>
        <java.version>17</java.version>
        <project.build.jdk>${java.version}</project.build.jdk>
        <jetlinks.pro.version>2.11.0-SNAPSHOT</jetlinks.pro.version>
        <spring.boot.version>3.4.3</spring.boot.version>
    </properties>

    <build>
        <finalName>${project.artifactId}</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>3.1.4</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.1.4</version>
                </plugin>

                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring.boot.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                    <configuration>
                        <source>${project.build.jdk}</source>
                        <target>${project.build.jdk}</target>
                        <encoding>${project.build.sourceEncoding}</encoding>
                        <compilerArgs>
                            <arg>-parameters</arg>
                            <arg>-J--add-opens=jdk.unsupported/com.sun.nio.file=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.unsupported/sun=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=java.base/java.util=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=java.base/java.math=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.scripting.nashorn/jdk.nashorn=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.scripting.nashorn/jdk.nashorn.internal.runtime=ALL-UNNAMED</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.3.1</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.8.13</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>test</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>

        </plugins>
    </build>

    <profiles>

        <!-- 单体项目运行时请设置 -P standalone -->
        <profile>
            <id>standalone</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <modules>
                <module>bootstrap</module>
            </modules>
        </profile>

        <profile>
            <id>example</id>
            <modules>
                <module>modules/examples/crud-examples</module>
                <module>modules/examples/rule-engine-example</module>
                <module>modules/examples/tracing-example</module>
                <module>modules/examples/rpc-example</module>
                <module>modules/examples/websocket-example</module>
                <module>modules/examples/expand-property-example</module>
                <module>modules/examples/thirdparty-iam-example</module>
            </modules>
        </profile>

        <!-- 微服务项目运行时请设置 -P microservice -->
        <profile>
            <id>microservice</id>
            <modules>
                <module>microservices/api-gateway-service</module>
                <module>microservices/authentication-service</module>
                <module>microservices/file-service</module>
                <module>microservices/iot-service</module>
                <module>microservices/notify-service</module>
                <module>microservices/rule-engine-service</module>
                <module>microservices/visualization-service</module>
                <module>microservices/ui-service</module>
            </modules>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>org.jetlinks.pro</groupId>
                <artifactId>jetlinks-parent</artifactId>
                <version>${jetlinks.pro.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>aliyun-nexus</id>
            <name>aliyun</name>
            <url>https://maven.aliyun.com/nexus/content/groups/public/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>

        <repository>
            <id>jetlinks</id>
            <name>JetLinks Maven Repository</name>
            <url>https://nexus.jetlinks.cn/content/groups/jetlinks/</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>

    </repositories>


    <pluginRepositories>
        <pluginRepository>
            <id>aliyun-nexus</id>
            <name>aliyun</name>
            <url>https://maven.aliyun.com/nexus/content/groups/public/</url>
        </pluginRepository>
    </pluginRepositories>

</project>
